Finalisation V1 : Fix Mobile, Footer et Z-index

--- a/app/globals.css
+++ b/app/globals.css
@@ -57,3 +57,17 @@ h6 {
   color: #16318B;
   /* oxy-blue */
 }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.animate-fadeIn {
+  animation: fadeIn 0.3s ease-in-out forwards;
+}
